# pycasc

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/pycasc/: __init__.py  c_casclib.pxd  core.pyi  core.pyx
src/pycasclib/: __init__.py  core.pxd  core.pyi  core.pyx
