[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.0", "cmake", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=pycasc"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
exclude = [
    "cache/*",
    "main.py"
]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
