[project]
name = "casclib"
version = "0.0.1"
description = "Python wrapper for CascLib by Ladislav Zezula"
authors = [
    { name="Ghostopheles", email="ghst@ghst.tools"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "License :: Public Domain",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/Ghostopheles/pycasc"
Repository = "https://github.com/Ghostopheles/pycasc.git"
Issues = "https://github.com/Ghostopheles/pycasc/issues"

[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.0", "cmake", "build"]
build-backend = "setuptools.build_meta"
