[metadata]
name = pycasc
description = Python wrapper for CascLib
author = Ghostopheles
license = MIT
license_file = license
platforms = win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = 
    pycasc
python_requires = >= 3.12
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    flake8>=7.0.0
    tox>=4.15.0
    pytest>=8.2.1
    pytest-cov>=5.0.0
    mypy>=1.10.0

[options.package_data]
pycasc = py.typed

[flake8]
max-complexity = 10
max-line-lenth = 160
exclude =
    # hide all temporary files from flake8
    cache
    main.py